@@ -20,6 +20,7 @@ Cacti CHANGELOG
 -feature: Add database repair utility
 -feature: Default Script Server/Script Queries now accept host specific ping_retries, max_oids
 -feature: Support for new variables |host_ping_retries| and |host_max_oids|
+-feature: Support changing the "Reindex Method" of associated data queries
 
 0.8.7a
 -bug#0000895: "Use Per-Data Source Value (Ignore this Value)" runs only when when checking "Allow Empty Input"
